added some initialization